# clipboardy

./: CMakeLists.txt  README.md  linux.sh  test.c  todo.md  tpc_socket.md  window.cmd
src/: linux.c  main.c  server_wind.c  socket_linux.c  socket_wind.c  wndow.c
src/halt/: client_wind.c  server_wind.c  socket_wind.c
src/headers/: socket_common.h
src/linux/: main.c  server.c  server.h
src/posix/: clipboard.c  clipboard.h  main.c  server.c  server.h
src/windows/: clipboard.c  clipboard.h  main.c  server.c  server.h
